revalidated all pages and css, now passes w3c validators properly Comments added to *all* css selectors and properties

--- a/html/contact.html
+++ b/html/contact.html
@@ -5,7 +5,7 @@
 	<title>Kontakt - Djupviks Hamn</title>
 	<meta charset="UTF-8" />
 	<link rel="stylesheet" type="text/css" href="../styles/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Fjalla+One|Open+Sans" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Fjalla+One%7COpen+Sans" rel="stylesheet">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
 
 		<!-- site navigation -->
 		<nav>
-			<ul id="nav">
+			<ul class="nav">
 				<li><a href="../index.html">Start</a></li>
 				<li><a href="./info.html">Information</a></li>
 				<li><a href="./guest.html">Gästplatser</a></li>
