--- a/html/english.html
+++ b/html/english.html
@@ -5,7 +5,7 @@
 	<title>In English - Djupviks Hamn</title>
 	<meta charset="UTF-8" />
 	<link rel="stylesheet" type="text/css" href="../styles/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Fjalla+One|Open+Sans" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Fjalla+One%7COpen+Sans" rel="stylesheet">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
 
 		<!-- site navigation -->
 		<nav>
-			<ul id="nav">
+			<ul class="nav">
 				<li><a href="../index.html">Start</a></li>
 				<li><a href="./info.html">Information</a></li>
 				<li><a href="./guest.html">Guests</a></li>
@@ -42,9 +42,9 @@
 			<!-- images from Djupvik -->
 			<figure class="images" id="englishImages">
 				<!-- will need reformatting in width and/or height when CSS is introduced -->
-				<img src="../images/garngard-daniel.jpg" alt="Djupvik's garngard, a place for fishermen to hang dry their nets." width="80%" class="fancyimage" />
-				<img src="../images/solnedgang.jpg" alt="Sunset over the harbour." width="80%" class="fancyimage" />
-				<img src="../images/hamn-eva.jpg" alt="A fishing boat arrives at the harbour." width="80%" class="fancyimage" />
+				<img src="../images/garngard-daniel.jpg" alt="Djupvik's garngard, a place for fishermen to hang dry their nets." class="fancyimage" />
+				<img src="../images/solnedgang.jpg" alt="Sunset over the harbour." class="fancyimage" />
+				<img src="../images/hamn-eva.jpg" alt="A fishing boat arrives at the harbour." class="fancyimage" />
 
 				<figcaption>
 					A picture is worth a thousand words, but we would need many
