--- a/html/history.html
+++ b/html/history.html
@@ -5,7 +5,7 @@
 	<title>Historia - Djupviks Hamn</title>
 	<meta charset="UTF-8" />
 	<link rel="stylesheet" type="text/css" href="../styles/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Fjalla+One|Open+Sans" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Fjalla+One%7COpen+Sans" rel="stylesheet">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
 
 		<!-- site navigation -->
 		<nav>
-			<ul id="nav">
+			<ul class="nav">
 				<li><a href="../index.html">Start</a></li>
 				<li><a href="./info.html">Information</a></li>
 				<li><a href="./guest.html">Gästplatser</a></li>
@@ -35,7 +35,7 @@
 	</header>
 	
 	<!-- background story about the port -->
-	<section class="container" id="historyContainer">
+	<section class="container historyContainer">
 		<article class="history">
 			<h2>En informationsberättelse av en Ekstabo.</h2>
 				<p>
