--- a/html/info.html
+++ b/html/info.html
@@ -5,7 +5,7 @@
 	<title>Information - Djupviks Hamn</title>
 	<meta charset="UTF-8" />
 	<link rel="stylesheet" type="text/css" href="../styles/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Fjalla+One|Open+Sans" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Fjalla+One%7COpen+Sans" rel="stylesheet">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
 
 		<!-- site navigation -->
 		<nav>
-			<ul id="nav">
+			<ul class="nav">
 				<li><a href="../index.html">Start</a></li>
 				<li><a href="./info.html" class="active">Information</a></li>
 				<li><a href="./guest.html">Gästplatser</a></li>
@@ -41,8 +41,8 @@
 
 				<figure class="infoFigure">
 					<!-- set width of images for now until we get CSS to do it for us -->
-					<img src="../images/boats_in_dock.jpg" alt="Båtar förtöjda vid en av djupviks bryggor." width="100%" class="infoImage" />
-					<img src="../images/stuff.jpg" alt="Djupviks Hammnkiosk." width="100%" class="infoImage" />
+					<img src="../images/boats_in_dock.jpg" alt="Båtar förtöjda vid en av djupviks bryggor." class="infoImage" />
+					<img src="../images/stuff.jpg" alt="Djupviks Hammnkiosk." class="infoImage" />
 				</figure>
 
 				<p>
