styling for 480p viewport

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<link rel="stylesheet" type="text/css" href="./styles/style.css">
 	<!-- use google fonts in order to speed up page loading by serving content from a fast CDN -->
 	<link href="https://fonts.googleapis.com/css?family=Fjalla+One%7COpen+Sans" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2" />
 </head>
 
 <body>
