--- a/html/contact.html
+++ b/html/contact.html
@@ -6,6 +6,7 @@
 	<meta charset="UTF-8" />
 	<link rel="stylesheet" type="text/css" href="../styles/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Fjalla+One%7COpen+Sans" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2" />
 </head>
 
 <body>
